k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odp-microservices-topology-inventory-exporter
  labels:
    app: odp-microservices-topology-inventory-exporter
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: odp-microservices-topology-inventory-exporter
