k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odp-microservices-topology-inventory-exporter
spec:
  hosts:
  - "*"
  gateways:
  - oss-gateway
  http:
  - match:
    - uri:
        prefix: /topology-inventory-exporter
    route:
    - destination:
        port:
          number: 8080
        host: odp-microservices-topology-inventory-exporter
